[package]
name = "import_map"
version = "0.4.0"
authors = ["the Deno authors"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/import_map"
description = "An implementation of WICG Import Maps specification"

# Don't include WPT test suite in uploaded crate
exclude = [
    "wpt/"
]

[features]
json = ["serde", "serde_json", "url/serde", "indexmap/serde"]
logging = ["log"]
default = ["json", "logging"]

[dependencies]
indexmap = { version = "1.7.0" }
log = { version = "0.4.14", optional = true }
serde = { version = "1.0.129", features = ["derive"], optional = true }
serde_json = { version = "1.0.66", features = ["preserve_order"], optional = true }
url = { version = "2.2.2" }

[dev-dependencies]
walkdir = "2.3.2"