[package]
name = "import_map"
version = "0.9.0"
authors = ["the Deno authors"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/import_map"
description = "An implementation of WICG Import Maps specification"

# Don't include WPT test suite in uploaded crate
exclude = [
  "wpt/"
]

[features]
logging = ["log"]
default = ["logging"]

[dependencies]
indexmap = { version = "1.8.2", features = ["serde"] }
log = { version = "0.4.14", optional = true }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = { version = "1.0.66", features = ["preserve_order"] }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
walkdir = "2.3.2"